(executable
 (name fuzz_types)
 (libraries digestif.c crowbar irmin)
 (preprocess
  (action
   ;; Use a rewriter to fill in `[%impl_record n]` and `[%impl_record n]`.
   (run fuzz/rewriter/rewriter.exe %{input-file}))))

(alias
 ;; Start fuzzing when calling `dune build @fuzz`.
 (name fuzz)
 (deps
  (source_tree ./input)
  fuzz_types.exe)
 (action
  (run afl-fuzz -i ./input -o output ./fuzz_types.exe @@)))
